--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "Note-server.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
+    "express-handlebars": "^5.2.1"
   },
   "devDependencies": {},
   "scripts": {
