--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
-    "express-handlebars": "^5.2.1"
+    "express-handlebars": "^5.2.1",
+    "jest": "^26.6.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "supertest": "^6.1.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
